refactor: norwegian api
